# udemy-tpp-section-11

./: .black.toml  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  build-package.sh  clear-dist-build.sh  dependencies.text  my_history.txt  pyproject.toml  requirements.txt  run.sh  setup.py
.github/workflows/: publish.yml
packaging/: my_file.py
packaging_demo/: _my_different_file.py  my_file.py  my_json_data_test.py  my_other_file.py  states_info.py
packaging_demo/my_folder/: cities.json  my_data.json  my_other_other_file.py
