[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
mypkg = ["*.json", "*.png"]

[project]
name = "packaging_demo_bsahlas"
version = "0.0.5"
description = "udemy.com - TPP Course working with PyPI"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
keywords = ["tpp", "continuous delivery", "python"]
authors = [
  {email = "bill.sahlas@gmail.com"},
  {name = "Bill Sahlas"}
]

classifiers = [
  "Programming Language :: Python"
]

dependencies = [
    "numpy",
    "fastapi"
]

[project.optional-dependencies]
colors = ["rich"]
static-code-analysis = ["pre-commit"]
test = ["pytest", "pytest-cov"]
release = ["twine", "build"]
dev = ["packaging-demo[test, colors, release, static-code-analysis]"]

[project.urls]
homepage = "https://example.com"
documentation = "https://readthedocs.org"
repository = "https://github.com/bsahlas/packaging-demo"


[tool.ruff]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]
# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]
# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]
line-length = 119

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]


[tool.flake8]
docstring-convention = "all"
# it's not a bug that we aren't using all of hacking
ignore = ["D107", "D212", "E501",  "W503",  "W605",  "D203"]
radon-max-cc = 10
exclude = ["venv"]
